--- a/client/src/scopes/Trade/Trade.css
+++ b/client/src/scopes/Trade/Trade.css
@@ -88,4 +88,13 @@ input {
 input:focus {
   background: none;
   outline: none;
+  border: none;
+}
+button {
+  padding: 0.5rem;
+  background-color: #ff1051;
+  color: white;
+  border: none;
+  border-radius: 0.25rem;
+  margin-left: 1rem;
 }
